# Nanopunk

./: Cargo.toml
assets/: Revolver.glb  character.glb  character.gltf
src/: main.rs
src/core/inventory/: mod.rs
src/core/item/: mod.rs
src/input/: actions.rs
src/math/: vectors.rs
src/plugins/: mod.rs
src/plugins/camera/: mod.rs  orbit3d.rs
src/plugins/camera/offset/: components.rs  controller.rs  mod.rs
src/plugins/data/: mod.rs
src/plugins/data/inventory/: mod.rs  resources.rs
src/plugins/input/: actions.rs  drivers.rs  mod.rs
src/plugins/interface/: mod.rs  resources.rs  systems.rs  window.rs
src/plugins/load/: mod.rs  systems.rs
src/plugins/physics/: mod.rs
src/plugins/player/: bundle.rs  components.rs  mod.rs  movement.rs
src/plugins/player/character/: components.rs  mod.rs  systems.rs
src/plugins/player/components/: bundle.rs  entity.rs  mod.rs
src/plugins/player/health/: mod.rs
src/plugins/player/input/: components.rs  mod.rs  systems.rs
src/plugins/player/inventory/: component.rs
src/plugins/player/look/: components.rs  mod.rs  systems.rs
src/plugins/player/physics/: bundle.rs  components.rs  mod.rs  systems.rs
src/plugins/player/renderer/: components.rs  mod.rs  systems.rs
src/plugins/player/tool/: mod.rs
src/plugins/screen/: mod.rs
src/plugins/screen/load/: mod.rs  systems.rs
src/plugins/state/: mod.rs
src/plugins/weapon/: type.rs
src/state/: app.rs
src/values/: mod.rs
src/values/common/: mod.rs  structures.rs
src/values/weapons/: mod.rs  structures.rs  values.rs
tests/: test_cache_gltf.rs
(+4 files in other folders)
