[package]
name = "Nanopunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_rapier3d = "0.25.0"
leafwing-input-manager = "0.13.3"
nalgebra = "0.32.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3