[package]
name = "nanopunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking", "jpeg", "webp"] }
bevy_rapier3d = { version =  "0.25.0", features = ["debug-render-3d"] }
bevy_egui = "0.26.0"
bevy-inspector-egui = "0.23.4"
#bevy_quill = "0.1.1" // Does not support bevy 0.13
#belly = { git = "https://github.com/jkb0o/belly.git" } // Does not support fucking bevy 0.13
leafwing-input-manager = "0.13.3"
nalgebra = "0.32.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3